--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,11 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <meta property="og:url" content="https://todo-app-ksu-burn.herokuapp.com"/>
+    <meta property="og:url" content="https://webheroschool.github.io/todo-list/"/>
     <meta property="og:image"content="../src/components/ItemList/img/error_picture.png"/>
     <meta property="og:image:width" content="1200"/>
     <meta property="og:image:height" content="630"/>
-    <title>Todo App</title>
+    <title>todo-list</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
